crates/toride-fail2ban/src/snapshots/toride_fail2ban__render__tests__filter_local_full.snap
---
source: crates/toride-fail2ban/src/render.test.rs
assertion_line: 769
expression: out
---
# Managed by fail2ban-kit.
# Do not edit manually unless you also disable this manager.

[full-filter]
prefregex = ^<F-MLFID>.*</F-MLFID>
failregex = ^Authentication failure from <HOST>$
            ^Invalid user .* from <HOST>$
ignoreregex = ^known-good.*$
             ^health-check.*$
datepattern = {^LN-BEG}
journalmatch = _SYSTEMD_UNIT=my.service
mode = aggressive
aa_extra = av
zz_extra = zv
