crates/toride-fail2ban/src/snapshots/toride_fail2ban__render__tests__filter_local_minimal.snap
---
source: crates/toride-fail2ban/src/render.test.rs
assertion_line: 744
expression: out
---
# Managed by fail2ban-kit.
# Do not edit manually unless you also disable this manager.

[myapp-auth]
failregex = ^Authentication failure from <HOST>$
