crates/toride-fail2ban/src/snapshots/toride_fail2ban__render__tests__jail_local_minimal.snap
---
source: crates/toride-fail2ban/src/render.test.rs
assertion_line: 118
expression: out
---
# Managed by fail2ban-kit.
# Do not edit manually unless you also disable this manager.

[myapp]
enabled = true
filter = myapp-auth
logpath = /tmp/auth.log
bantime = 10m
findtime = 10m
